--- a/src/app.css
+++ b/src/app.css
@@ -7,8 +7,7 @@
 */
 @font-face {
   font-family: "Inter";
-  src:
-    url("/fonts/Inter-VariableFont_opsz,wght.ttf") format("truetype");
+  src: url("/fonts/Inter-VariableFont_opsz,wght.ttf") format("truetype");
   font-weight: 100 900;
   font-style: normal;
   font-display: swap;
@@ -16,8 +15,7 @@
 
 @font-face {
   font-family: "Inter";
-  src:
-    url("/fonts/Inter-Italic-VariableFont_opsz,wght.ttf") format("truetype");
+  src: url("/fonts/Inter-Italic-VariableFont_opsz,wght.ttf") format("truetype");
   font-weight: 100 900;
   font-style: italic;
   font-display: swap;
